test/libyul/yulSyntaxTests/invalid_type4.yul
{
    switch 1
    case 8: invalidType {}
}
// ----
// ParserError 5473: (24-38): Types are not valid in untyped Yul.
